@@ -1,6 +1,5 @@
 /*
- * Copyright (c) 2020 SAP SE. All rights reserved.
- * Copyright (c) 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -22,11 +21,16 @@
  * questions.
  */
 
-#include "precompiled.hpp"
-#include "prims/universalNativeInvoker.hpp"
-#include "utilities/debug.hpp"
+// key: compiler.misc.not.applicable.types
+// key: compiler.err.prob.found.req
+// key: compiler.note.preview.filename
+// key: compiler.note.preview.recompile
+// options: --enable-preview --source ${jdk.version}
 
-address ProgrammableInvoker::generate_adapter(jobject jabi, jobject jlayout) {
-  Unimplemented();
-  return nullptr;
+class NotApplicableTypes {
+    void t(int i) {
+        switch (i) {
+            case Integer j -> {}
+        }
+    }
 }
